# EmbeddedSystem

./: .gitignore  CMakeLists.txt
Basic Principle/: test.cpp
examples/OpenCV/: main.cpp
examples/run/: demo.cpp  merge.cpp  opencv.cpp  run.sh  runBack.cpp
examples/run 5/: merge.cpp  opencv.cpp  run.sh  runBack.cpp
examples/run 8/: merge.cpp  runBack.cpp
examples/testDefaultFault/: test.sh  testDefaultFault.cpp
